style: 整理docker相关note