@@ -2,7 +2,10 @@
 > maven | gradle
 
 ## Dockerfile
-```
+### 方式1
+> 直接将 spring boot 打包后的 jar 构建成镜像
+
+```dockerfile
 FROM openjdk:8-jdk-alpine
 VOLUME /tmp
 ARG JAR_FILE
@@ -10,29 +13,69 @@ COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
 ```
 
+### 方式2
+> spring boot 打包后的 jar 解压后, 再取相应文件构建成镜像
+
+- 打包后，自动解压
+```xml
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-dependency-plugin</artifactId>
+    <executions>
+        <execution>
+            <id>unpack</id>
+            <phase>package</phase>
+            <goals>
+                <goal>unpack</goal>
+            </goals>
+            <configuration>
+                <artifactItems>
+                    <artifactItem>
+                        <groupId>${project.groupId}</groupId>
+                        <artifactId>${project.artifactId}</artifactId>
+                        <version>${project.version}</version>
+                    </artifactItem>
+                </artifactItems>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
+```
+- mvn install 时 build 镜像
+```xml
+<plugin>
+    <groupId>com.spotify</groupId>
+    <artifactId>dockerfile-maven-plugin</artifactId>
+    <version>1.4.9</version>
+    <configuration>
+        <repository>${docker.image.prefix}/${project.artifactId}</repository>
+    </configuration>
+    <executions>
+        <execution>
+            <id>build-image</id>
+            <phase>install</phase>
+            <goals>
+                <goal>build</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin>
+```
+- dockerfile 配置
+```dockerfile
+FROM openjdk:8-jdk-alpine
+VOLUME /tmp
+ARG DEPENDENCY=target/dependency
+COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
+COPY ${DEPENDENCY}/META-INF /app/META-INF
+COPY ${DEPENDENCY}/BOOT-INF/classes /app
+RUN echo "Asia/Shanghai" > /etc/timezone
+RUN mkdir --parents /log/kbase-psrt/
+ENTRYPOINT ["java", "-Xmx4G", "-XX:+HeapDumpOnOutOfMemoryError", "-XX:HeapDumpPath=/log/kbase-psrt/", "-XX:+PrintGCDetails", "-XX:+PrintGCDateStamps", "-XX:+PrintHeapAtGC", "-Xloggc:/log/kbase-psrt/gc.log", "-cp", "app:app/lib/*", "com.eastrobot.kbs.KbasePsrtApplication"]
+```
+
 ## By maven
 ```xml
-<properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
-    <skipTests>true</skipTests>
-    <docker.image.prefix>amos</docker.image.prefix>
-</properties>
-
-<dependencies>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-test</artifactId>
-        <scope>test</scope>
-    </dependency>
-</dependencies>
-
-
 <build>
     <finalName>greet</finalName>
     <plugins>
@@ -45,7 +88,7 @@ ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
             <artifactId>dockerfile-maven-plugin</artifactId>
             <version>1.3.6</version>
             <configuration>
-                <repository>${docker.image.prefix}/${project.artifactId}</repository>
+                <repository>amos/${project.artifactId}</repository>
                 <buildArgs>
                     <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
                 </buildArgs>
@@ -59,7 +102,7 @@ ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
 > 据说gradle适配docker比较好，以下配置即可
 
 ### build.gradle
-```
+```groovy
 buildscript {
     ext {
         springBootVersion = '2.0.5.RELEASE'
